k8s/notebooks/jupyter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-notebook
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: jupyter-notebook
  template:
    metadata:
      labels:
        app: jupyter-notebook
    spec:
      serviceAccountName: pipeline-runner
      containers:
      - name: notebook
        image: jupyter/scipy-notebook:python-3.10
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: notebook-storage
          mountPath: /home/jovyan/work
      volumes:
      - name: notebook-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-notebook
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 8888
    nodePort: 31400
  selector:
    app: jupyter-notebook
  type: NodePort
