k8s/notebooks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notebook-service
  namespace: kubeflow
spec:
  type: LoadBalancer
  selector:
    notebook-name: python-demo
  ports:
  - port: 8888
    targetPort: 8888
